# seccask

./: .gitignore  CMakeLists.txt  CommonCommands.md  Doxyfile  README.md  clean.sh  clean_cache.sh  clean_storage.sh  conanfile.txt  key.pem  kill_processes.sh  requirements.txt  seccask-exp.py  start_exp.py
.conf/: config.ini  ledgebase.ini  ustore_ncrs
csrc/: coordinator.cc  encfs.cc  main.cc  message.cc  msg_handler.cc  ratls.cc  ustore.cc  worker.cc
exp/: encfs_sklmnist.yaml  exp_cs_autolearn.yaml  exp_cs_sa.yaml  exp_cs_sa_slimmer.yaml  exp_dummy.yaml  exp_mnist.yaml  exp_resnet18_c10.yaml  exp_sklmnist.yaml  exp_sklmnist_4x4.yaml  exp_vgg16_c10.yaml  exp_vgg16_c10_4x4.yaml  loop_exp.sh  mlp2.yaml
exp/.comp/: exp_autolearn_1.yaml  exp_autolearn_2.yaml  exp_autolearn_3.yaml  exp_autolearn_4.yaml  exp_autolearn_5.yaml  exp_autolearn_ce.yaml  exp_sa_1.yaml  exp_sa_2.yaml  exp_sa_3.yaml  exp_sa_4.yaml  exp_sa_5.yaml  exp_sa_ce.yaml
exp/.post_proc_util/: extract_pipeline.sh
exp/post_proc/: component.py
gramine_manifest/: Makefile  python.manifest.seccask.py39.toml  seccask.manifest.py39.toml
include/seccask/: config.h  coordinator.h  encfs.h  message.h  msg_handler.h  ratls.h  ustore.h  util.h  worker.h
license/: LICENSE.stream_zip
pysrc/: cpp_coordinator.pyi  cpp_glassdb.pyi  cpp_io_profiler.pyi  exp_runner.py  manifest.py  package.py  pipeline.py  profiler.py  scheduler.py  worker_cache.py  workerconn.py
pysrc/daemon/: coordinator.py  (+3 more)
tests/: cert.pem  dh2048.pem  loop_cacheeffect.sh  loop_dummy_mem.sh  loop_io.sh  loop_peakmem.sh  loop_scalability.sh
(+108 files in other folders)
